# maschinenbau-v3

./: .env.example  .gitignore  .replit  CLAUDE.md  DEPLOYMENT.md  MIGRATION_CHECKLIST.md  appspec.yml  cloudformation.yml  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: Dockerfile  Dockerfile.dockerignore  package.json  vitest.config.ts
artifacts/api-server/src/: app.ts  index.ts
artifacts/chat-web/: Dockerfile  index.html  nginx.conf  package.json
artifacts/chat-web/.replit-artifact/: artifact.toml
artifacts/chat-web/public/: site.webmanifest
artifacts/chat-web/src/: App.tsx  index.css
artifacts/rag-service/: Dockerfile  Dockerfile.dockerignore  package.json
artifacts/rag-service/app/: bedrock.py  chunking.py  config.py  db.py  main.py  pageindex_runner.py  parsing.py  storage.py
artifacts/rag-service/logs/: tmp08s04sfq.pdf_20260418_025950.json  tmp3k2t20rd.pdf_20260418_030901.json  tmp576q2otb.pdf_20260418_043802.json  tmp6nfbmfte.pdf_20260417_130316.json  tmp7vkuu4c0.pdf_20260418_045051.json  tmpdophtw80.pdf_20260418_044643.json  tmph58o1_9q.pdf_20260418_033215.json  tmpko1b5t8n.pdf_20260418_044056.json  tmpov4orxiq.pdf_20260417_130039.json  tmppeil952x.pdf_20260418_044214.json  tmpqht0v0h0.pdf_20260418_044415.json  tmpr8r9z7sn.pdf_20260418_033741.json  (+6 more)
attached_assets/: branding-1776427055599.json
lib/api-spec/: openapi.yaml
pageindex/: Dockerfile  requirements.txt  server.py
pageindex/pageindex/: config.yaml  page_index.py  page_index_md.py  utils.py
scripts/: codedeploy-deploy.sh  codedeploy-stop.sh
(+45 files in other folders)
